--- a/3.4-openssh/Dockerfile
+++ b/3.4-openssh/Dockerfile
@@ -2,7 +2,7 @@ FROM helphi/alpine:3.4
 
 MAINTAINER helphi
 
-RUN apk add --no-cache openssh &&\
+RUN apk add --no-cache openssh openssh-sftp-server &&\
     ssh-keygen -A
 
 CMD ["/usr/sbin/sshd", "-D", "-e"]
