--- a/3.5-util/Dockerfile
+++ b/3.5-util/Dockerfile
@@ -2,13 +2,12 @@ FROM alpine:3.5
 
 ENV LANG=C.UTF-8
 
-RUN apk update &&\
-    apk add --no-cache tzdata &&\
+RUN apk add --no-cache tzdata &&\
     cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
     echo "Asia/Shanghai" > /etc/timezone &&\
     apk del tzdata
 
-RUN apk add --no-cache openssh openssh-sftp-server lftp rsync curl git &&\
-    ssh-keygen -A
+RUN apk add --no-cache openssh openssh-sftp-server lftp rsync curl git
+RUN ssh-keygen -A
 
 CMD ["/usr/sbin/sshd", "-D", "-e"]
