--- a/3.5-util/Dockerfile
+++ b/3.5-util/Dockerfile
@@ -10,4 +10,5 @@ RUN apk add --no-cache tzdata &&\
 RUN apk add --no-cache bash openssh openssh-sftp-server lftp rsync curl git
 RUN ssh-keygen -A
 
+EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D", "-e"]
