--- a/3.5-util/Dockerfile
+++ b/3.5-util/Dockerfile
@@ -9,6 +9,7 @@ RUN apk add --no-cache tzdata &&\
 
 RUN apk add --no-cache bash openssh openssh-sftp-server lftp rsync curl git
 RUN ssh-keygen -A
+RUN echo "root:root" | chpasswd
 
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D", "-e"]
