--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,5 +1,6 @@
 From chekote/node
 
-Run npm install gulp -g
+Run npm install gulp -g \
+    && npm install ejs-json:1.0.4 gulp-autoprefixer:6.0.0
 
 ENTRYPOINT ["/bin/bash", "-c"]
