--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,3 +1,9 @@
 FROM python:3.8-slim-buster
+
+LABEL version="0.1"
+
 RUN pip install -i pymongo pandas requests pandas numpy
-CMD ["python"]
+
+WORKDIR /app
+
+ENTRYPOINT ["python"]
