--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.8-slim-buster
 
 LABEL version="0.1"
 
-RUN pip install -i pymongo pandas requests pandas numpy
+RUN pip3 install -i pymongo pandas requests pandas numpy
 
 WORKDIR /app
 
