--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,9 +1,8 @@
-FROM python:3.8-slim-buster
+FROM python:3.9.0b4-alpine3.12
 
 LABEL version="0.1"
 
-RUN pip3 install -i pymongo pandas requests pandas numpy
+RUN pip install -i pymongo pandas requests pandas numpy
 
 WORKDIR /app
-
 ENTRYPOINT ["python"]
