--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:alpine
 LABEL version="0.1"
 
-RUN pip install -i pymongo pandas requests pandas numpy
+RUN pip install -i pymongo pandas requests numpy
 
 WORKDIR /app
 ENTRYPOINT ["python"]
