--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8.5-alpine3.12
 
-RUN pip3 install -i pymongo pandas requests numpy
+RUN pip install -r requests
 
 WORKDIR /app
-ENTRYPOINT ["python3"]
+ENTRYPOINT ["python"]
